--- a/finetune_MSE_config.yaml
+++ b/finetune_MSE_config.yaml
@@ -1,6 +1,6 @@
 exp_name: 'MAE_BASE_Pretrain_LR_1.5e-4_MSE-FineTune'       # Experiment name
 
-pretrained_model_ckpt_path: '/proj/vondrick4/naveen/uMAE_runs/2024-12-12-00-00-59-648312 + MAE_BASE_Pretrain_MSE/checkpoint-epoch=99.ckpt'  # Path to the pretrained checkpoint
+pretrained_model_ckpt_path: '..../uMAE_runs/2024-12-12-00-00-59-648312 + MAE_BASE_Pretrain_MSE/checkpoint-epoch=99.ckpt'  # Path to the pretrained checkpoint
 
 dataloader:
   batch_size: 600
