--- a/finetune_config.yaml
+++ b/finetune_config.yaml
@@ -1,6 +1,6 @@
 exp_name: 'MAE_BASE_Pretrain_LR_1.5e-4_Quantile-0.5-FineTune'       # Experiment name
 
-pretrained_model_ckpt_path: '/proj/vondrick4/naveen/uMAE_runs/2024-12-12-02-40-01-967880 + MAE_BASE_Pretrain_LR_1.5e-4_Quantile-0.5/checkpoint-epoch=99.ckpt'  # Path to the pretrained checkpoint
+pretrained_model_ckpt_path: '..../uMAE_runs/2024-12-12-02-40-01-967880 + MAE_BASE_Pretrain_LR_1.5e-4_Quantile-0.5/checkpoint-epoch=99.ckpt'  # Path to the pretrained checkpoint
 
 dataloader:
   batch_size: 600
