--- a/finetune_config_MSE_Quant.yaml
+++ b/finetune_config_MSE_Quant.yaml
@@ -1,6 +1,6 @@
 exp_name: 'MAE_BASE_Pretrain_LR_1.5e-4_MSE-Quantile-0.05-to-0.95-FineTune'       # Experiment name
 
-pretrained_model_ckpt_path: '/proj/vondrick4/naveen/uMAE_runs/2024-12-12-15-33-08-303147 + MAE_BASE_Pretrain_LR_1.5e-4_Quantile-0.05-to-0.95 + MSE/checkpoint-epoch=99.ckpt'  # Path to the pretrained checkpoint
+pretrained_model_ckpt_path: '..../uMAE_runs/2024-12-12-15-33-08-303147 + MAE_BASE_Pretrain_LR_1.5e-4_Quantile-0.05-to-0.95 + MSE/checkpoint-epoch=99.ckpt'  # Path to the pretrained checkpoint
 
 dataloader:
   batch_size: 300
